# actiongate-sitrep

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent.json  app.py  handler.py  prompt.txt  pyproject.toml  render.yaml
.agents/skills/orchestration/: SKILL.md
.agents/skills/orchestration/agents/: openai.yaml
.agents/skills/retrospective/: SKILL.md
.agents/skills/retrospective/agents/: openai.yaml
.agents/skills/submission/: SKILL.md
.agents/skills/submission/agents/: openai.yaml
docs/: actiongate-comparison.html  demo.md  evaluation-results.md  judging-strategy.md  scenario-evaluation-results.md  submission-draft.md  submission-status.md
evals/: actiongate_cases.json
examples/: README.md  calendar_link_handler.py  followup_email_handler.py  research_brief_handler.py  slide_outline_handler.py
scripts/: evaluate_actiongate.py  evaluate_scenarios.py  preflight_submission.py  smoke-test.sh
sitrep_agent/: sdk.py
tests/: test_app.py  test_evaluate_actiongate.py  test_evaluate_scenarios.py  test_handler.py  test_preflight_submission.py  test_sdk.py
